created new breakpoint for larger screens created scrolling class for header/navbar to resize smaller.

--- a/public/assets/css/default/main.css
+++ b/public/assets/css/default/main.css
@@ -130,7 +130,7 @@ section {
 }
 section:first-of-type {
   padding-top: 2rem;
-  padding-bottom: 4rem;
+  padding-bottom: 1rem;
 }
 section:nth-child(even) {
   background: #f0f0f0;
@@ -346,7 +346,25 @@ figure figcaption {
   z-index: 1000;
 }
 
-header {
+.bodySVG {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .bodySVG {
+    padding: 1rem;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    opacity: 7%;
+    display: inline-block;
+  }
+}
+
+.topHeader {
   padding-top: 1em;
   padding-bottom: 1em;
   background: #40a5a0;
@@ -355,13 +373,14 @@ header {
   position: sticky;
   top: 0;
   z-index: 10000;
+  transition: all 125ms ease-in-out;
 }
-header .logo {
+.topHeader .logo {
   text-align: center;
   padding-right: 4rem;
   padding-left: 4rem;
 }
-header img {
+.topHeader img {
   height: calc(60px + 2em);
   display: inline-block;
 }
@@ -401,19 +420,23 @@ header img {
   transform: translateX(0);
 }
 
-header {
+.headerScroll {
   padding-top: 0;
   padding-bottom: 0;
   height: 60px;
   width: 100%;
 }
-header .logo {
+.headerScroll .logo {
   text-align: center;
   padding: 0.5rem 4rem;
 }
-header img {
+.headerScroll .logo img {
   height: calc(60px - 1rem);
   display: inline-block;
+}
+.headerScroll .headerSVG {
+  height: calc(60px - 5px);
+  bottom: -3px;
 }
 
 .toggle-label {
@@ -485,21 +508,44 @@ header img {
 }
 
 .hero {
-  --hero-height: 80vh;
-  height: min(var(--hero-height), 1080px);
+  height: 100vh;
+  width: 100%;
   position: relative;
-  z-index: 100;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 65vh;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .hero {
+    height: 50vh;
+  }
 }
 .hero__image {
-  width: 100vw;
-  height: min(var(--hero-height), 1080px);
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 .hero__image img {
-  width: 100vw;
-  height: min(var(--hero-height), 1080px);
+  height: 100%;
   object-fit: cover;
-  z-index: 100;
+}
+.hero__content {
+  padding: 1rem;
+  width: 100%;
+  max-width: 30ch;
+  text-align: center;
+  color: white;
+  font-size: 1.3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 102;
+}
+.hero__content-title {
+  color: white;
 }
 .hero__overlay {
   position: absolute;
@@ -509,26 +555,9 @@ header img {
   bottom: 0;
   z-index: 101;
 }
-.hero__content {
-  text-align: center;
-  color: white;
-  padding: 1rem 2rem;
-  border-radius: 4px;
-  width: 100%;
-  max-width: 40ch;
-  font-size: 1.3rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 102;
-  transform: translate(-50%, -50%);
-}
-.hero__content-title {
-  color: white;
-}
 
 .menuWidget {
-  padding: 1rem;
+  padding: 1rem 2rem;
   width: 100%;
   background: white;
   text-align: center;
@@ -537,37 +566,49 @@ header img {
   top: 0;
   z-index: 102;
   display: flex;
-  gap: 2rem;
+  gap: 10px;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
 }
 @media screen and (min-width: 768px) {
   .menuWidget {
-    width: 25vw;
-    bottom: 0;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
+    padding: 0.5rem;
+    width: 25%;
+    flex-flow: column wrap;
   }
 }
-.menuWidget .actionBlock {
+@media screen and (min-width: 1100px) {
+  .menuWidget {
+    width: 20%;
+    flex-flow: column wrap;
+  }
+}
+.menuWidget__item {
+  padding: 1rem;
+  width: 100%;
+  border: dashed 3px #e23d18;
+  border-radius: 4px;
+}
+.menuWidget__item .actionBlock {
   margin-top: 0.75rem;
   display: flex;
   justify-content: center;
   gap: 1.5rem;
 }
-.menuWidget .actionBlock i {
+.menuWidget__item .actionBlock i {
   font-size: 0.75rem;
 }
 
 @media screen and (min-width: 768px) {
   .menuWidget + .hero__image {
-    --hero-height: 65vh;
-    width: 75vw;
+    width: 75%;
   }
-  .menuWidget + .hero__image img {
-    width: 75vw;
-    object-fit: cover;
+}
+@media screen and (min-width: 1100px) {
+  .menuWidget + .hero__image {
+    width: 80%;
   }
 }
 
@@ -685,6 +726,7 @@ textarea:focus {
 
 .imageElement {
   padding-top: 2rem;
+  padding-bottom: 2rem;
   text-align: left;
   display: flex;
   flex-wrap: wrap;
@@ -697,8 +739,13 @@ textarea:focus {
   flex-basis: calc(var(--modifier) * 999);
   margin: var(--margin);
 }
+.imageElement__content {
+  position: relative;
+  z-index: 2;
+}
 .imageElement p {
   margin-top: 0;
+  font-size: 1.1rem;
 }
 
 .reviewGrid {
