--- a/structure/templates/elements/image/image.html
+++ b/structure/templates/elements/image/image.html
@@ -15,8 +15,9 @@
       <div class="imageElement__content">
        
         {{ element.content }}
+        <div class="bodySVG">{{ getMediaSrcSet(page.media.filename, page.media.caption) }} </div>
       </div>
-
+    
     </div>
 
   </div>
