--- a/structure/sass/default/elements/_contact.scss
+++ b/structure/sass/default/elements/_contact.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr;
   gap                  : 1rem;
 
-  @media screen and (min-width: $breakpoint) {
+  @media screen and (min-width:  $breakpoint-small) {
     grid-template-columns: repeat(2, 1fr);
   }
 }
