--- a/structure/sass/default/elements/_hero.scss
+++ b/structure/sass/default/elements/_hero.scss
@@ -1,26 +1,47 @@
-// Hero Element  
-.hero {
-  --hero-height: 80vh;
-  height       : min(var(--hero-height), 1080px);
-  position     : relative;
-  z-index      : 100;
+ .hero {
+   height: 100vh;
+   width   : 100%;
+   position: relative;
 
-  &__image {
-    width : 100vw;
-    height: min(var(--hero-height), 1080px);
-    position: relative;
- 
+   @media screen and (min-width: $breakpoint-small){
+     height: 65vh;
+   }
+   @media screen and (min-width: $breakpoint-wide){
+     height: 50vh;
+   }
 
-    img {
-      width : 100vw;
-      height : min(var(--hero-height), 1080px);
-      object-fit: cover;
-      z-index : 100;
-    
-    }
-  }
+   &__image {
+     width   : 100%;
+     height  : 100%;
+     position: relative;
 
-  &__overlay {
+     img {
+       height: 100%;
+       object-fit: cover;
+     }
+
+   }
+
+   &__content {
+     @include padding(1rem);
+     width: 100%;
+     max-width: 30ch;
+     text-align: center;
+     color     : $text-light;
+     font-size: 1.3rem;
+
+     position : absolute;
+     top      : 50%;
+     left     : 50%;
+     transform: translate(-50%, -50%);
+     z-index: 102;
+
+     &-title {
+       color: $text-light;
+     }
+   }
+
+   &__overlay {
     position: absolute;
     top     : 0;
     left    : 0;
@@ -28,77 +49,63 @@
     bottom  : 0;
     z-index : 101;
   }
-  &__content {
-    text-align: center;
-    color     : $text-light;
-    @include padding(1rem 2rem);
-    border-radius: $br;
-    width     : 100%;
-    max-width : 40ch;
-    font-size: 1.3rem;
+ }
 
-    position  : absolute;
-    top       : 50%;
-    left      : 50%;
-    z-index   : 102;
+ // MenuWidget with Hero
 
-    transform : translate(-50%, -50%);
- 
-    &-title {
-      color: $text-light;
-    }
-  } 
-}
+ .menuWidget {
+   @include padding(1rem 2rem);
+   width     : 100%;
+   background: $bg-light;
+   text-align: center;
 
-// With Menu Widget
+   position: absolute;
+   right   : 0;
+   top     : 0;
+   z-index : 102;
 
-.menuWidget {
-  @include padding(1rem);
-  width     : 100%;
-  background: $bg-light;
-  text-align: center;
+   display        : flex;
+   gap            : 10px;
+   flex-flow      : row wrap;
+   justify-content: center;
+   align-items    : center;
+   align-content: center;
 
-  position: absolute;
-  right   : 0;
-  top     : 0;
-  z-index : 102;
+   @media screen and (min-width: $breakpoint-small){
+     @include padding(.5rem);
+     width: 25%;
+     flex-flow: column wrap;
+   }
+   @media screen and (min-width: $breakpoint-wide){
+     width: 20%;
+   
+     flex-flow: column wrap;
+   }
 
-  display        : flex;
-  gap            : 2rem;
-  flex-flow      : row wrap;
-  justify-content: center;
-  align-items    : center;
+   &__item {
+     @include padding(1rem);
+     width: 100%;
+     border       : dashed 3px $clr-accent;
+     border-radius: $br;
 
-  @media screen and (min-width: $breakpoint) {
-    width   : 25vw;
+     .actionBlock {
+       @include margin(.75rem null null null);
+       display        : flex;
+       justify-content: center;
+       gap            : 1.5rem;
 
-    bottom  : 0;
+       i {
+         font-size: .75rem;
+       }
+     }
+   }
+ }
 
-   flex-flow: column nowrap;
-   justify-content: flex-start;
+ .menuWidget + .hero__image {
+  @media screen and (min-width: $breakpoint-small){
+    width: 75%;
   }
-  .actionBlock {
-    @include margin(.75rem null null null);
-    display        : flex;
-    justify-content: center;
-    gap            : 1.5rem;
-    i {
-      font-size: .75rem;
-    }
+  @media screen and (min-width: $breakpoint-wide){    
+    width: 80%;
   }
 }
-.menuWidget + .hero__image {
-  @media screen and (min-width: $breakpoint){
-    --hero-height: 65vh;
-    width: 75vw;
-    img{
-      width: 75vw;
-      object-fit: cover;
-    }
-  }
-
-}
-
-
-
- 
