--- a/structure/templates/includes/_navbar.html
+++ b/structure/templates/includes/_navbar.html
@@ -1,4 +1,4 @@
-<header class="topHeader headerScroll">
+<header class="topHeader jsHeaderScroll">
   <div class="logo">
     <a href="{{ pathFor('home') }}">
       <img src="/assets/img/svg/mypieLogo.svg" alt="{{ site.settings.siteName }}">
