--- a/structure/templates/elements/text/text.html
+++ b/structure/templates/elements/text/text.html
@@ -1,13 +1,8 @@
 {# Text Element #}
 
- <section>
+<div class="container">
   <h2 class="element__title">{{ element.title }}</h2>
-    <div class="container-wide">
-     
   <div class="textElement">
-    
-        {{ element.content }}
+    {{ element.content }}
   </div>
-    </div>
- </section>
-
+</div>
