--- a/structure/sass/default/includes/_hamburger.scss
+++ b/structure/sass/default/includes/_hamburger.scss
@@ -10,6 +10,7 @@
   height: 3.5rem;
   width : 4rem;
   cursor: pointer;
+  height: 100% !important;
 
   display        : flex;
   align-items    : center;
@@ -54,9 +55,9 @@
 
 // Nav Toggle Animation
 .toggle:checked~.toggle-label {
-  border-radius: 50%;
-  filter: drop-shadow(0 2px 2px rgba($bg-dark, .15));
-  background: rgba($clr-primary,.25);
+  // border-radius: 50%;
+  // filter: drop-shadow(0 2px 2px rgba($bg-dark, .15));
+  // background: rgba($clr-primary,.25);
   left: 33%;
 
 }
