--- a/structure/templates/elements/collection/collection.html
+++ b/structure/templates/elements/collection/collection.html
@@ -3,7 +3,6 @@
 {# Get the collection summary set. The second argument is the number of items to return per page #}
 {% set collection = getCollectionPagesWithPagination(element.collection_id, 6) %}
 
-
 <section id="friends">
   <div class="container">
     <h2 class="element__title">{{ element.title }}</h2>
@@ -16,9 +15,9 @@
 
     <ul class="cards">
       {% for detail in collection %}
-      <a href="{{ pathFor('showPage', {'slug1': detail.collection_slug, 'slug2': detail.page_slug}) }}">
+      <a class="card" href="{{ pathFor('showPage', {'slug1': detail.collection_slug, 'slug2': detail.page_slug}) }}">
 
-        <li class="card">
+        <li>
           {% if detail.media.filename %}
           <div class="card__image">
             <img src="{{ getMediaPath(detail.media.filename, 'thumb') }}">
@@ -27,6 +26,10 @@
 
           <div class="card__title">
             <h3 class="element__title">{{ detail.title }}</h3>
+          </div>
+          <div class="card__content">
+       
+         <p>   {{ detail.meta_description}}</p>
           </div>
         
         </li>
