--- a/structure/templates/pages/home.html
+++ b/structure/templates/pages/home.html
@@ -7,35 +7,41 @@
 
 {% block body %}
 <section id="news">
-  <div class="container">
+
     {{ getBlockElementsHtml(page.blocks.newsBlock) }}
-  </div>
+
 </section>
 
 {{ getBlockElementsHtml(page.blocks.secondHeroBlock) }}
 
 <section id="newsletter">
-  <h2 class="element__title">Newsletter Signup</h2>
   <div class="container">
+    <h2 class="element__title">Newsletter Signup</h2>
     <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-      src="https://email-marketing.ionos.co.uk/widget/iframe/32tw/9RU" width="100%" height="auto"></iframe>
+      src="https://email-marketing.ionos.co.uk/widget/iframe/32tw/9RU" width="100%" height="250px"></iframe>
   </div>
 </section>
 
+
+
+
+
 <section id="reviews">
-  <h2 class="element__title">What People are Saying</h2>
+  <div class="container">
+    <h2 class="element__title">What People are Saying</h2>
+  </div>
   <div class="container-wide">
-  <div class="reviewGrid">  {{ getBlockElementsHtml(page.blocks.reviewBlock) }}</div>
+    <div class="reviewGrid"> {{ getBlockElementsHtml(page.blocks.reviewBlock) }}</div>
   </div>
 </section>
 
 <section id="insta-feed" class="element insta-feed">
   <h2 class="element__title">Latest on Instagram</h2>
   <div class="container-wide">
-      <!-- LightWidget WIDGET -->
-      <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-      <iframe src="https://cdn.lightwidget.com/widgets/998722a7bf445c73b341b029b9773a5f.html" scrolling="no"
-        allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+    <!-- LightWidget WIDGET -->
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+    <iframe src="https://cdn.lightwidget.com/widgets/998722a7bf445c73b341b029b9773a5f.html" scrolling="no"
+      allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
   </div>
 </section>
 
